Chapter editor - save chapter hierarchy

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -36,6 +36,8 @@
     "ShiftChapterDown": "Posunout vybrané kapitoly dolů",
     "EditPageName": "Upravit název stránky",
     "DeletePage": "Smazat stránku",
+    "EditChapterName": "Upravit název kapitoly",
+    "DeleteChapter": "Smazat kapitolu",
 
     "Fail": "Chyba",
     "Success": "Úspěch",
