Fix loading image editor

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -55,6 +55,7 @@
     "EditPage": "Edit page",
     "CreateText": "Create text",
     "CreateTextPage": "Create a text page",
+    "Comment": "Comment",
     "Commentary": "Commentary",
     "Respond": "Respond",
     "Edit": "Edit",
