--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -55,6 +55,7 @@
     "EditPage": "Upravit stránku",
     "CreateText": "Vytvořit text",
     "CreateTextPage": "Vytvořit text stránky",
+    "Comment": "Komentář",
     "Commentary": "Komentář",
     "Respond": "Odpovědět",
     "Edit": "Upravit",
