Add styles for Dropzone used in project editor

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Upload/Upload.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Upload/Upload.cs-CZ.json
@@ -4,7 +4,7 @@
   "dictionary": {
     "UploadManagementTitle": "Administrace - Nahrání díla",
     "BookUploadHeader": "Nahrání díla",
-    "UploadHint": "Pro nahrání souborů klikněte na formulář a proveďtě výběr nebo je na formlulář přetáhněte.",
+    "UploadHint": "Pro nahrání souborů klikněte na formulář a proveďtě výběr nebo je na formulář přetáhněte.",
     "NewVersionMessage": "Zde napište zprávu k nové verzi",
     "Process": "Zpracovat",
     "Processing": "Zpracovává se...",
