--- a/UJCSystem/ITJakub.Web.Hub/Localization/Upload/Upload.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Upload/Upload.en.json
@@ -4,7 +4,7 @@
   "dictionary": {
     "UploadManagementTitle": "Administration - Upload book",
     "BookUploadHeader": "Upload book",
-    "UploadHint": "To upload files click on the form and make a selection or drag and drom them on the form.",
+    "UploadHint": "To upload files click on the form and make a selection or drag and drop them on the form.",
     "NewVersionMessage": "Write message to new version here",
     "Process": "Process",
     "Processing": "Processing...",
