correcting news error message; remaking added news messages with localization

--- a/UJCSystem/ITJakub.Web.Hub/Localization/News/News.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/News/News.en.json
@@ -2,6 +2,7 @@
   "culture": "en",
   "scope": "News",
   "dictionary": {
+    "LoadingError":  "Error occured while loading news", 
     "NewsManagementTitle": "Administration - Add news",
     "AddNews": "Add news",
     "NewsTextPlaceholder": "Write the news here...",
