--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -17,6 +17,9 @@
     "SelectedResources": "Selected {0}/{1} texts, {2}/{3} images, {4}/{5} audio resources.",
     "CreateSnapshotWithoutResources": "No resource was selected for publication. Are you sure that you want to publish the work?",
 
+    "Track": "Track",
+    "Chapter": "Chapter",
+
     "Page": "Page",
     "PageName": "Page: {0}",
     "Pages": "Pages",
