Chapter editor - fixed loading, add empty chapter name check

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -39,6 +39,7 @@
     "DeletePage": "Smazat stránku",
     "EditChapterName": "Upravit název kapitoly",
     "DeleteChapter": "Smazat kapitolu",
+    "ChapterNameRequired": "Název kapitoly je povinný.",
 
     "Fail": "Chyba",
     "Success": "Úspěch",
