--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -39,6 +39,7 @@
     "DeletePage": "Delete page",
     "EditChapterName": "Edit chapter name",
     "DeleteChapter": "Delete chapter",
+    "ChapterNameRequired": "Chapter name is required",
 
     "Fail": "Fail",
     "Success": "Success",
