Page list - fixed name editing, add success alert after saving

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -38,6 +38,7 @@
     "ShiftPageDown": "Posunout vybrané stránky dolů",
     "EditPageName": "Upravit název stránky",
     "DeletePage": "Smazat stránku",
+    "PageListSaveSuccess": "Stránky byly úspěšně uloženy.",
 
     "Fail": "Chyba",
     "Success": "Úspěch",
