--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -38,6 +38,7 @@
     "ShiftPageDown": "Shift selected pages down",
     "EditPageName": "Edit page name",
     "DeletePage": "Delete page",
+    "PageListSaveSuccess": "Pages saved successfully.",
 
     "Fail": "Fail",
     "Success": "Success",
