Add missing localization for group created alert

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
@@ -58,6 +58,7 @@
     "User": "Uživatel",
     "ManagePermissions": "Spravovat práva",
     "Permissions": "Oprávnění",
+    "SuccessGroupCreate": "Skupina úspěšně vytvořena.",
     "SuccessGroupUpdate": "Úprava skupiny proběhla úspěšně.",
     "SuccessUserUpdate": "Úprava uživatele proběhla úspěšně.",
     "GroupEditTitle": "Úprava skupiny",
