Chapter editor - add discard button

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -40,7 +40,8 @@
     "ShiftChapterDown": "Shift selected chapters down",
     "EditPageName": "Edit page name",
     "DeletePage": "Delete page",
-    "EditChapterName": "Edit chapter name",
+    "EditChapter": "Edit chapter",
+    "DiscardChapterChanges": "Discard changes",
     "DeleteChapter": "Delete chapter",
     "ChapterNameRequired": "Chapter name is required",
     "PageListSaveSuccess": "Pages saved successfully.",
