--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -40,11 +40,13 @@
     "ShiftChapterDown": "Posunout vybrané kapitoly dolů",
     "EditPageName": "Upravit název stránky",
     "DeletePage": "Smazat stránku",
-    "EditChapterName": "Upravit název kapitoly",
+    "EditChapter": "Upravit kapitolu",
+    "DiscardChapterChanges": "Zrušit změny",
     "DeleteChapter": "Smazat kapitolu",
     "ChapterNameRequired": "Název kapitoly je povinný.",
     "PageListSaveSuccess": "Stránky byly úspěšně uloženy.",
     "ConfirmOrDiscardChapterChanges": "Prosím potvrďte nebo zrušte změny názvů kapitol a jejich stran.",
+    
 
     "Fail": "Chyba",
     "Success": "Úspěch",
