Chapter editor - add generate chapters button

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -66,9 +66,12 @@
     "Chapters": "Kapitoly",
 
     "CreateChapter": "Vytvořit kapitolu",
+    "GenerateChapters": "Generovat kapitoly",
+    "GenerateChaptersWarning": "Generování kapitol odstraní všechny stávájící kapitoly. Chcete spustit generování?",
     "ChapterName": "Název kapitoly",
     "NewChapter": "Nová kapitola",
     "StartsOnPage": "Začíná na stránce",
+    "NoChapters": "Projekt neobsahuje kapitoly.",
 
     "CommonInformation": "Obecné informace",
     "ProjectName": "Název díla",
