--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -66,9 +66,12 @@
     "Chapters": "Chapters",
 
     "CreateChapter": "Create chapter",
+    "GenerateChapters": "Generate chapters",
+    "GenerateChaptersWarning": "Chapters generating will remove all existing chapters. Do you want to start generating?",
     "ChapterName": "Chapter name",
     "NewChapter": "New chapter",
     "StartsOnPage": "Starts on page",
+    "NoChapters": "Project does not contain chapters.",
 
     "CommonInformation": "translate[Obecné informace]",
     "ProjectName": "translate[Název díla]",
