--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
@@ -66,7 +66,7 @@
 
     "ProjectPermissionManagementHeadline": "Správa práv projektů",
     "Projects": "Projekty",
-    "AddProjectPermissionToGroup": "Přidat právo na projekt skupině",
+    "AddProjectPermissionToGroup": "Přidat skupině právo na projekt",
     "SelectedProject": "Vybraný projekt",
     "AddPermissionToGroup": "Přidat oprávnění skupině",
     "ResetPassword": "Resetovat heslo",
