--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
@@ -66,7 +66,7 @@
 
     "ProjectPermissionManagementHeadline": "Project's permission management",
     "Projects": "Projects",
-    "AddProjectPermissionToGroup": "Add project permission to a group",
+    "AddProjectPermissionToGroup": "Add permission to a group on project",
     "SelectedProject": "Selected project",
     "AddPermissionToGroup": "Add permission to group",
     "ResetPassword": "Reset password",
