Fix saving in page list editor

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -23,6 +23,7 @@
     "Page": "Stránka",
     "PageName": "Stránka: {0}",
     "Pages": "Stránky",
+    "NoPages": "Projekt neobsahuje stránky.",
     "PageContent": "Obsah stránky",
     "PagePreview": "Náhled stránky",
     "UnsavedChanges": "Provedné změny nejsou uloženy.",
