--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -23,6 +23,7 @@
     "Page": "Page",
     "PageName": "Page: {0}",
     "Pages": "Pages",
+    "NoPages": "Project does not contain pages.",
     "PageContent": "Page content",
     "PagePreview": "Page preview",
     "UnsavedChanges": "Made changes are not saved.",
