Improve layout in dialog for assigning permissions to project

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
@@ -5,6 +5,7 @@
     "GroupPermissionManagementTitle": "Administrace - Správa skupin",
     "GroupManagementHeadline": "Správa skupin",
     "GroupPermissionManagementHeadline": "Správa oprávnění skupin",
+    "SearchGroupLabel": "Vyhledat skupinu",
     "SearchGroup": "Hledat skupinu...",
     "SelectedGroup": "Vybraná skupina",
     "Name": "Název",
