--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
@@ -5,6 +5,7 @@
     "GroupPermissionManagementTitle": "Administration - Group management",
     "GroupManagementHeadline": "Group management",
     "GroupPermissionManagementHeadline": "Group's permissions management",
+    "SearchGroupLabel": "Search group",
     "SearchGroup": "Search group...",
     "SelectedGroup": "Selected group",
     "Name": "Name",
