Add missing title to new button for discarding changes in page editor

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.en.json
@@ -68,6 +68,7 @@
     "Close": "Close",
     "CloseWithoutSaving": "Close without saving",
     "Cancel": "Cancel",
+    "DiscardChanges": "Discard changes",
     "SaveAndClose": "Save and close",
     "Save": "Save",
     "SaveWithErrors": "Save with errors",
