--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -68,6 +68,7 @@
     "Close": "Zavřít",
     "CloseWithoutSaving": "Zavřít bez uložení",
     "Cancel": "Zrušit",
+    "DiscardChanges": "Zrušit změny",
     "SaveAndClose": "Uložit a zavřít",
     "Save": "Uložit",
     "SaveWithErrors": "Uložit s chybami",
