--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -46,7 +46,7 @@
     "DeleteChapter": "Smazat kapitolu",
     "ChapterNameRequired": "Název kapitoly je povinný.",
     "PageListSaveSuccess": "Stránky byly úspěšně uloženy.",
-    "ConfirmOrDiscardChapterChanges": "Prosím potvrďte nebo zrušte změny názvů kapitol a jejich stran.",
+    "ConfirmOrDiscardChapterChanges": "Prosím potvrďte nebo zrušte změny názvů kapitol a jejich stránek.",
     
 
     "Fail": "Chyba",
