Page editor - add dialog to adding page

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -133,6 +133,8 @@
     "SelectTimePeriod": "Vyberte časový úsek",
 
     "EditPageList": "Upravit seznam stránek",
+    "AddPage": "Přidat stránku",
+    "PageName": "Název stránky",
     "NewPages": "Nové stránky",
     "Pair": "Spárovat",
     "Split": "Rozdělit",
