--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -133,6 +133,8 @@
     "SelectTimePeriod": "Select time period",
 
     "EditPageList": "translate[Upravit seznam stránek]",
+    "AddPage": "Add page",
+    "PageName": "Page name",
     "NewPages": "New pages",
     "Pair": "translate[Spárovat]",
     "Split": "translate[Rozdělit]",
