--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -26,7 +26,7 @@
     "NoPages": "Projekt neobsahuje stránky.",
     "PageContent": "Obsah stránky",
     "PagePreview": "Náhled stránky",
-    "UnsavedChanges": "Provedné změny nejsou uloženy.",
+    "UnsavedChanges": "Provedené změny nejsou uloženy.",
     "PageContainsText": "Stránka obsahuje text",
     "PageContainsImage": "Stránka obsahuje obrázek",
     "EmptyPage": "Stránka neobsahuje text ani obrázek.",
