Cancel book filtering button for Dropdown Select

--- a/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PluginsJs/PluginsJs.cs-CZ.json
@@ -32,6 +32,7 @@
     "ViewOptions": "Možnosti zobrazení",
     "AllBookmarks": "Všechny záložky",
     "NoTitle": "{0}bez názvu{1}",
+    "CancelBookFilter": "Zrušit filtrování knih",
 
     "LoadingContentError": "Chyba při načítání obsahu",
     "Pictures": "Obrázky",
