Adjust style and label for Back button from Publish Snapshot page

--- a/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/RidicsProject/RidicsProject.cs-CZ.json
@@ -17,6 +17,7 @@
     "SelectedResources": "Vybráno {0}/{1} textů, {2}/{3} obrázků, {4}/{5} audio zdrojů.",
     "CreateSnapshotWithoutResources": "Nebyl vybrán žádný zdroj pro publikaci. Opravdu si přejete dílo publikovat?",
 
+    "BackToProject": "Zpět do editoru díla",
     "Track": "Stopa",
     "Chapter": "Kapitola",
 
