--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -230,6 +230,9 @@
     "DeleteProject": "Smazat dílo",
     "DeleteProjectAreYouSure": "Opravdu chcete smazat dílo",
     "Close2": "Zavřít",
+    "CreateForumInModules": "Vytvoření fóra v modulech",
+    "NoSelectedModuleForForum": "Musí být vybrán alespoň jeden modul pro vytvoření fóra.",
+    "EmptyProjectNameError": "Název díla nemůže být prázdný.",
 
     "RenameSource": "Přejmenovat zdroj",
 
