Project list - project owner filter

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -221,6 +221,7 @@
     "ProjectList": "translate[Projekty - Seznam]",
     "CreateNewProject": "translate[Založit nové dílo]",
     "Filter": "translate[Filtrovat]",
+    "AllProjects": "All projects",
     "MyProjects": "translate[Moje díla]",
     "ForeignProjects": "translate[Cizí díla]",
     "FindByName": "translate[Vyhledat podle názvu]",
