--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -221,6 +221,7 @@
     "ProjectList": "Projekty - Seznam",
     "CreateNewProject": "Založit nové dílo",
     "Filter": "Filtrovat",
+    "AllProjects": "Všechny díla",
     "MyProjects": "Moje díla",
     "ForeignProjects": "Cizí díla",
     "FindByName": "Vyhledat podle názvu",
