--- a/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.cs-CZ.json
@@ -42,6 +42,8 @@
     "DeleteRoleConfirm": "Opravdu chcete smazat skupinu {0}?",
     "AssignPermission": "Přiřadit právo",
     "UnassignPermission": "Odebrat právo",
+    "Groups": "Skupiny",
+    "Users": "Uživatelé",
     "RegisteredRoleModifyWarning":
       "Skupina {0} se přiřadí automaticky každému registrovanému uživateli. Jste si jisti, že ji chcete upravit?",
     "UnregisteredRoleModifyWarning":
