Project list - refactoring, fix localization

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -44,7 +44,7 @@
     "Duplicate": "translate[Duplikovat]",
     "ResourceNewVersion": "translate[Nová verze zdroje ]",
     "NewVersionComment": "translate[Komentář k nové verzi]",
-    "ProjectsList": "translate[Projekty - Seznam]",
+    "MyProjectsList": "My works - List",
     "PublicationInfo": "Information about publication",
     "EditionNotePublish": "The edition note will be published with work",
     "NoEditionNote": "The edition note to this work is not created",
@@ -218,7 +218,7 @@
     "Comment": "translate[Komentář]",
     "CreateDate": "translate[Datum vložení]",
 
-    "ProjectList": "translate[Projekty - Seznam]",
+    "ProjectList": "translate[Moje díla]",
     "CreateNewProject": "translate[Založit nové dílo]",
     "Filter": "translate[Filtrovat]",
     "AllProjects": "All projects",
@@ -234,9 +234,11 @@
     "CreateForumInModules": "Create a forum in modules",
     "NoSelectedModuleForForum": "At least one module must be selected for forum creation.",
     "EmptyProjectNameError": "Project name cannot be empty.",
-    "NoPermissionsSearch": "Sorry, but we could not find any project matching ",
-    "NoPermissionsFound": "Sorry, but no projects were found",
+    "NoProjectsSearch": "Sorry, but we could not find any project matching ",
+    "NoProjectsFound": "Sorry, but no projects were found",
     "RenameSource": "translate[Přejmenovat zdroj]",
+    "SearchQuery": "Showing results for",
+    "ResetSearch": "Reset search",
 
     "Group": "trnaslate[Skupina {0}]",
     "Page": "translate[Strana {0}]",
