Add user code view to user profile

--- a/UJCSystem/ITJakub.Web.Hub/Localization/account/account.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/account/account.cs-CZ.json
@@ -48,6 +48,9 @@
     "TwoFactorProvider": "Způsob dvoufaktorového ověření",
     "SuccessTwoFactorUpdate": "Nastavení dvoufaktorového ověření bylo úspšeně aktualizováno.",
     "TwoFactorVerificationIsNotActive": "Emailová adresa není ověřena - dvoufaktorové ověření není aktivní.",
-    "Save": "Uložit"
+    "Save": "Uložit",
+
+    "UserCode": "Uživatleský kód",
+    "GenerateNewUserCode": "Vygenerovat nový uživatelský kód"
   }
 }
