--- a/UJCSystem/ITJakub.Web.Hub/Localization/account/account.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/account/account.en.json
@@ -48,6 +48,9 @@
     "TwoFactorProvider": "Two-factor provider",
     "SuccessTwoFactorUpdate": "Two-factor verification was successfully updated.",
     "TwoFactorVerificationIsNotActive": "Email address is not confirmed - two-factor verification is not active.",
-    "Save": "Save"
+    "Save": "Save",
+    
+    "UserCode": "User code",
+    "GenerateNewUserCode": "Generate new user code"
   }
 }
