--- a/UJCSystem/ITJakub.Web.Hub/Localization/UserCodeViewModel/UserCodeViewModel.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/UserCodeViewModel/UserCodeViewModel.cs-CZ.json
@@ -2,6 +2,6 @@
   "culture": "cs-CZ",
   "scope": "UserCodeViewModel",
   "dictionary": {
-    "UserCode": "Uživatelský kód"
+    "UserCode": "Kód uživatele"
   }
 }
