--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
@@ -75,6 +75,7 @@
     "ReadProjectPermission": "Permission to read the project",
     "ReadPublishedProjectPermission": "Permission to read the published project",
     "EditProjectPermission": "Permission to edit the project",
-    "AdminProjectPermission": "Permission to admin the project"
+    "AdminProjectPermission": "Permission to admin the project",
+    "AddPermissionOnProjectHelp" : "translate[Pro přidání práva na projekt skupině, vyhledejte danou skupinu pomocí pole níže. Pokud chcete přidat právo pouze jedné osobě, poždájte ji, aby Vám sdělila svůj kód uživatele, který zadáte do pole níže. Kód uživatele lze nalézt v profilu uživatele, pod záložkou \"Kód uživatele\".]"
   }
 }
