Project list - add rename project dialog

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -227,7 +227,9 @@
     "FindByName": "Vyhledat podle názvu",
     "AdvancedSearch": "Pokročilé vyhledávání",
     "NewProject": "Nové dílo",
-    "NewProjectName": "Název díla",
+    "NewProjectName": "Pracovní název díla",
+    "Rename": "Přejmenovat",
+    "RenameProject": "Přejmenovat pracovní název díla",
     "DeleteProject": "Smazat dílo",
     "DeleteProjectAreYouSure": "Opravdu chcete smazat dílo",
     "Close2": "Zavřít",
