--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.en.json
@@ -227,7 +227,9 @@
     "FindByName": "translate[Vyhledat podle názvu]",
     "AdvancedSearch": "translate[Pokročilé vyhledávání]",
     "NewProject": "translate[Nové dílo]",
-    "NewProjectName": "translate[Název díla]",
+    "NewProjectName": "translate[Pracovní název díla]",
+    "Rename": "Rename",
+    "RenameProject": "translate[Přejmenovat pracovní název díla]",
     "DeleteProject": "translate[Smazat dílo]",
     "DeleteProjectAreYouSure": "translate[Opravdu chcete smazat dílo]",
     "Close2": "translate[Zavřít]",
