Rename project dialog - add link to project edit

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Admin/Admin.cs-CZ.json
@@ -231,6 +231,7 @@
     "Rename": "Přejmenovat",
     "RenameProject": "Přejmenovat pracovní název díla",
     "DeleteProject": "Smazat dílo",
+    "GoToProjectEdit": "Přejít do úpravy díla",
     "DeleteProjectAreYouSure": "Opravdu chcete smazat dílo",
     "Close2": "Zavřít",
     "CreateForumInModules": "Vytvoření fóra v modulech",
