Show correct placeholder if value is null

--- a/UJCSystem/ITJakub.Web.Hub/Localization/cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/cs-CZ.json
@@ -33,6 +33,7 @@
     "No": "Ne",
     "Back": "Zpět",
     "DefaultTitle": "Default title",
+    "NotFilled": "Nezadáno",
 
     "SortBy": "Řadit podle",
     "UserAccount": "Uživatelský účet",
