--- a/UJCSystem/ITJakub.Web.Hub/Localization/en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/en.json
@@ -33,6 +33,7 @@
     "Yes": "Yes",
     "No": "No",
     "DefaultTitle": "Default title",
+    "NotFilled": "Not filled",
 
     "SortBy": "Sort by",
     "UserAccount": "User account",
