Add UserCode to UserDetailContract, add UserCode to EditUser and EditUserRoles views

--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
@@ -57,6 +57,7 @@
     "AssignedGroups": "Assigned groups",
     "AssignToGroup": "Assign to group",
     "User": "User",
+    "UserCode": "User code",
     "ManagePermissions": "Manage permissions",
     "Permissions": "Permissions",
     "SuccessGroupCreate": "Group successfully created.",
