--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.cs-CZ.json
@@ -57,6 +57,7 @@
     "AssignedGroups": "Přiřazené skupiny",
     "AssignToGroup": "Přiřadit do skupiny",
     "User": "Uživatel",
+    "UserCode": "Kód uživatele",
     "ManagePermissions": "Spravovat práva",
     "Permissions": "Oprávnění",
     "SuccessGroupCreate": "Skupina úspěšně vytvořena.",
