--- a/UJCSystem/ITJakub.Web.Hub/Localization/UpdateUserViewModel/UpdateUserViewModel.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/UpdateUserViewModel/UpdateUserViewModel.en.json
@@ -7,6 +7,7 @@
     "HasAtLeastNChars": "The {0} must have at least {2} characters.",
     "FirstName": "First name",
     "LastName": "Last name",
+    "UserCode": "User code",
     "NotEmpty": "The {0} can not be empty.",
     "MustBeFilled": "The {0} can not be empty.",
     "The {0} field is not a valid e-mail address": "The {0} field is not a valid e-mail address",
