--- a/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.cs-CZ.json
@@ -29,9 +29,11 @@
     "CreateRoleWithUserError": "Nastala neočekávaná chyba při vytváření skupiny s uživatelem.",
     "RoleIsNotSelected": "Není vybrána skupina.",
     "UserIsNotSelected": "Uživatel není vybrán.",
+    "UserCodeIsNotEntered" : "Není zadán kód uživatele.",
     "ProjectIsNotSelected": "Není vybrán projekt.",
     "RemoveProjectFromRoleError": "Nastala neočekávaná chyba při odstraňování práva na projekt ze skupiny.",
     "AddProjectToRoleError": "Nastala neočekávaná chyba při přidávání práva na projekt skupině.",
+    "AddProjectToUserError": "Nastala neočekávaná chyba při přidávání práva na projekt uživateli.",
     "ChangesSavedSuccessfully": "Změny byly úspěšně uloženy.",
     
     "PasswordResetSuccess": "Odkaz pro resetování hesla byl odeslán na email uživatele.",
