--- a/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/Permission/Permission.en.json
@@ -58,6 +58,7 @@
     "AssignToGroup": "Assign to group",
     "User": "User",
     "UserCode": "User code",
+    "GroupsAndUsers": "Groups and users",
     "ManagePermissions": "Manage permissions",
     "Permissions": "Permissions",
     "SuccessGroupCreate": "Group successfully created.",
@@ -69,14 +70,16 @@
     "ProjectPermissionManagementHeadline": "Project's permission management",
     "Projects": "Projects",
     "AddProjectPermissionToGroup": "Add permission to a group on project",
+    "AddProjectPermissionToUser": "Add permission to a user on project",
     "SelectedProject": "Selected project",
     "AddPermissionToGroup": "Add permission to group",
+    "AddPermissionToUser": "Add permission to user",
     "ResetPassword": "Reset password",
 
     "ReadProjectPermission": "Permission to read the project",
     "ReadPublishedProjectPermission": "Permission to read the published project",
     "EditProjectPermission": "Permission to edit the project",
     "AdminProjectPermission": "Permission to admin the project",
-    "AddPermissionOnProjectHelp": "translate[Pro přidání práva na projekt skupině, vyhledejte danou skupinu pomocí pole níže. Pokud chcete přidat právo pouze jedné osobě, požádejte ji, aby Vám sdělila svůj kód uživatele, který zadáte do pole níže. Kód uživatele lze nalézt v profilu uživatele pod záložkou \"Kód uživatele\".]"
+    "AddPermissionOnProjectHelp": "translate[Pokud chcete přidat právo pouze jedné osobě, požádejte ji, aby Vám sdělila svůj kód uživatele, který zadáte do pole níže. Kód uživatele lze nalézt v profilu uživatele pod záložkou \"Kód uživatele\".]"
   }
 }
