--- a/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/PermissionJs/PermissionJs.en.json
@@ -29,9 +29,11 @@
     "CreateRoleWithUserError": "An unexpected error occurred when creating the group with the user.",
     "RoleIsNotSelected": "The group is not selected.",
     "UserIsNotSelected": "The user is not selected.",
+    "UserCodeIsNotEntered" : "The user code is not entered.",
     "ProjectIsNotSelected": "The project is not selected.",
     "RemoveProjectFromRoleError": "An unexpected error occurred when removing the project's permission from the group.",
     "AddProjectToRoleError": "An unexpected error occurred when adding the project's permission to the group.",
+    "AddProjectToUserError": "An unexpected error occurred when adding the project's permission to the user.",
     "ChangesSavedSuccessfully": "Changes were successfully saved.",
     
     "PasswordResetSuccess": "Link for resetting password was sent to the user's email.",
