Improve dialogs when user reaches edge of the corpus search results

--- a/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.cs-CZ.json
@@ -42,6 +42,8 @@
     "NumberOfResultsPerPageWarning": "Počet výsledků na stránce by měl být mezi {0} a {1}.",
     "Warning": "Upozornění",
     "LastPageOfResults": "Poslední stránka výsledků",
+    "LastPageOfResultsDetail": "Nelze načíst další výsledky, protože se již nacházíte na poslední stránce.",
+    "FirstPageOfResultsDetail": "Nelze načíst předchozí stránku, protože se již nacházíte na první stránce.",
     "AllResults": "Všechny výsledky",
     "PageWithNumberDoesNotExists": "Stránka {0} neexistuje",
     "NoResults": "Žádné výsledky"
