Display current page number in corpus search

--- a/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.en.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.en.json
@@ -22,6 +22,7 @@
     "NumberOfResults": "Number of results",
     "NumberOfResultsOnPage": "Number of results on page",
     "NumberOfProjects": "Number of projects",
+    "CurrentPage": "Current page",
     "UseSearchForResults": "Use search for showing results.",
     "Doc": "Doc",
     "Author": "Author",
