--- a/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/BohemianTextBank/BohemianTextBank.cs-CZ.json
@@ -22,6 +22,7 @@
     "NumberOfResults": "Počet výsledků",
     "NumberOfResultsOnPage": "Počet výsledků na stránce",
     "NumberOfProjects": "Počet děl",
+    "CurrentPage": "Aktuální stránka",
     "UseSearchForResults": "Pro zobrazení výsledků použijte vyhledávání",
     "Doc": "Doc",
     "Author": "Autor",
