--- a/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
+++ b/UJCSystem/ITJakub.Web.Hub/Localization/MainServiceErrorCode/MainServiceErrorCode.cs-CZ.json
@@ -55,6 +55,8 @@
     "change-in-conflict": "Nelze uložit provedné změny, protože konfliktní změny už byly provedeny jiným uživatelem.",
     "reserved-username-error": "Uživatelské jméno '{0}' je rezerováno, nelze ho použít.",
     "group-not-found": "Skupina nebyla nalezena",
+    "group-already-assigned-to-project": "Skupina už má přiřazené nějaké právo k tomuto dílu",
+    "user-already-assigned-to-project": "Uživatel už má přiřazené nějaké právo k tomuto dílu",
     
     //Auth service codes
     "generic-error": "Operace se nezdařila",
